# comic-translate

./: rtit.cabal
