name: rtit
version: 0.1.0.0
cabal-version: 1.8
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: ivan.kristo@gmail.com
homepage: https://github.com/ivan444/rtit
synopsis: Real-time image text translation tool.
description:

category: Language
author: Ivan Krišto
data-files:
    gui/rtit.glade

executable rtit
    main-is: Main.hs
    build-depends:
        base ==4.8.*,
        glib -any,
        gtk3 -any,
        haxl -any,
        mtl -any,
        bytestring -any,
        array -any,
        text -any,
        htesseract-ocr -any,
        hflags
    hs-source-dirs: src

